chore: service version docs
